2003-06-01  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.14 "cassava" is released.

2003-05-10  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.13 "cauliflower" is released.

2003-04-24  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.12 "carrot" is released.

2003-03-30  Adrian Aichner  <adrian@xemacs.org>

	* xemacs.mak (install): PROBLEMS is actually in $(SRCROOT).

2003-03-26  Adrian Aichner  <adrian@xemacs.org>

	* xemacs.mak (install): Copy $(BLDLIB_SRC)\PROBLEMS, now that
	nt\PROBLEMS is gone (part of ..\PROBLEMS now).

2003-03-22  Adrian Aichner  <adrian@xemacs.org>

	* xemacs.mak (installation): Restore version convention in
	generated Installation file.

2003-03-09  Ben Wing  <ben@xemacs.org>

	* config.inc.samp (COMPFACE_DIR):
	Note that relative directories are a no-no in BUILD_DIR and
	SOURCE_DIR.  Use paths relative to $(MAKEROOT) instead.

2003-03-06  Ben Wing  <ben@xemacs.org>

	* xemacs.mak (INFO): New.
	* xemacs.mak (PATH_DEFINES):
	Add override for info/ as well when separate source/build dirs.
	
	* xemacs.mak (dump_temacs):
	* xemacs.mak (all):
	* xemacs.mak (TEMACS_DUMP_DEP):
	* xemacs.mak (update-elc): New.
	* xemacs.mak (docfile):
	* xemacs.mak (update-elc-2):
	* xemacs.mak (load-shadows):
	Order sections in main build process and add comments.  Add
	additional dependencies to try and prevent later steps from
	happening when failures in earlier steps have occurred.

2003-03-01  Ben Wing  <ben@xemacs.org>

	* PROBLEMS: Delete.

	* config.inc.samp (USE_FASTCALL):
	* config.inc.samp (HAVE_VC6): Removed.
	* config.inc.samp (DEBUG_XEMACS):
	* config.inc.samp (SUPPORT_EDIT_AND_CONTINUE): New.
	* xemacs.mak (DEBUG_XEMACS):
	* xemacs.mak (HAVE_VC6): Removed.
	* xemacs.mak (SUPPORT_EDIT_AND_CONTINUE): New.
	* xemacs.mak (CCV):
	* xemacs.mak (LIB_SRC_CFLAGS): New.
	* xemacs.mak (ETAGS_DEPS):
	* xemacs.mak (OS):
	* xemacs.mak (TEMACS_LFLAGS):
	Eliminate HAVE_VC6, use SUPPORT_EDIT_AND_CONTINUE in its place.